--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Nexa AI Solutions | StyleStore Demo</title>
+    <title> Nexa Store Demo</title>
     <!-- Tailwind CSS CDN for instant styling without config -->
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
